fix sidebar margin-top on mobile

--- a/assets/sass/components/_implementation.scss
+++ b/assets/sass/components/_implementation.scss
@@ -41,6 +41,7 @@
 			background-color: $jonquil;
 			width: 40%;
 			padding: .5rem;
+			margin-top: 1.5rem;
 			display: flex;
 			align-items: center;
 			justify-content: center;
