--- a/assets/sass/layout/_sidebar.scss
+++ b/assets/sass/layout/_sidebar.scss
@@ -13,7 +13,6 @@
 
 	@include respond(tab-port-xl) { margin-top: 14rem; }
 	@include respond(phone-xxl) { margin-top: 13.9rem; }
-	@include respond(phone-lg) { margin-top: 16.9rem; }
 
 	&__menu {
 		width: 100%;
@@ -30,7 +29,7 @@
 		text-transform: uppercase;
 		font-weight: bold;
 		font-size: 2rem;
-		padding: 1.5rem;
+		padding: 1rem;
 		cursor: pointer;
 	}
 
